--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Orca-mini Chat</title>
+    <title>LocalAI Chat</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css')}}">
     <script>
         function startSSE(question) {
